# solana-smart-contract-note

./: Anchor.toml
programs/noter/: Cargo.toml
programs/noter/src/: lib.rs
tests/: noter.ts
